--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,21 +1,29 @@
 <%= render "projects/errors"  %>
 
-<h2 align="center">New Project</h2>
+<div class="center jumbotron">
+  <h2 align="center">New Project</h2>
+</div>
 
-<%= form_for @project do |f| %>
-  <p>
-    <%= f.label :name %> <br />
-    <%= f.text_field :name %>
-  </p>
-  
-  <p>
-    <%= f.label :description %> <br />
-    <%= f.text_area :description %>
-  </p>
-  
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
-<%= link_to "Project list" %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="well">
+      <%= form_for @project do |f| %>
+        <p>
+          <%= f.label :name %> <br />
+          <%= f.text_field :name %>
+        </p>
+        
+        <p>
+          <%= f.label :description %> <br />
+          <%= f.text_area :description %>
+        </p>
+        
+        <p>
+          <%= f.submit class: "btn btn-primary" %>
+        </p>
+      
+      <% end %>
+    </div>
+    <%= link_to "Project list", projects_path %>
+  </div>
+</div>
