--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,29 +1,37 @@
 <%= render "projects/errors"  %>
 
-<div class="center jumbotron">
-  <h2 align="center">New Project</h2>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <div class="well">
-      <%= form_for @project do |f| %>
-        <p>
-          <%= f.label :name %> <br />
-          <%= f.text_field :name %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+            <%= form_for(@project, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+            
+             <div class="form-group">
+               <div class="control-label col-md-2">
+                  <%= f.label :name %> 
+               </div>
+               <div class="col-md-8">
+                 <%= f.text_field :name, class: 'form-control', placeholder: "Name of todo", autofocus: true %>
+               </div>
+             </div>
+            
+            <div class="form-group">
+               <div class="control-label col-md-2">
+                  <%= f.label :description %> 
+               </div>
+               <div class="col-md-8">
+                 <%= f.text_area :description, rows: 5, class: 'form-control', placeholder: "Add project description" %>
+               </div>
+             </div>
+          
+            <div class="form-group">
+              <div class="col-md-offset-2 col-md-10">
+                <%= f.submit class: "btn btn-primary" %> 
+                <%= link_to "Back to Index", projects_path, class: "btn btn-primary" %>
+              </div>
+            </div>
+          
+          <% end %>
         </p>
-        
-        <p>
-          <%= f.label :description %> <br />
-          <%= f.text_area :description %>
-        </p>
-        
-        <p>
-          <%= f.submit class: "btn btn-primary" %>
-        </p>
-      
-      <% end %>
     </div>
-    <%= link_to "Project list", projects_path %>
   </div>
 </div>
