--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,1 +1,6 @@
+<div class="center jumbotron">
+  <h2 align="center">Create an New Project</h2>
+</div>
+
+<% render "projects/errors" %>
 <%= render "projects/form" %>
