--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,23 +1,25 @@
-<div class="jumbotron center">
-  <h2 align="center">Index</h2>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-4">
-    <table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-  </tr>
-  <% @projects.each do |pro| %>
-    <tr>
-      <td><%= pro.name %></td>
-       <td><%= pro.description %></td>
-       <td><%= link_to "Edit", edit_project_path(pro) %></td>
-       <td><%= link_to "View Project", project_path(pro) %></td>
-       <td><%= link_to "Delete", project_path(pro), method: :delete, data: {confirm: "Are you sure??"} %></td>
-    </tr>
-  <% end %>
-</table>
+<%= render "layouts/flash" %>
+<div class="container">
+  <div class="jumbotron center">
+    <h2 align="center">Index</h2>
   </div>
+    
+ <div align="center">
+        
+           <div align="center">
+             <% @projects.each do |pro| %>
+             <div class="col-md-4 col-md-offset-4 well profile-black-white-thin row "<%= cycle('profile-black-white-thin-b', '') %>>
+               <p class="descriptionText">Project: <%= pro.name %></p>
+               <p>Description: <%= pro.description %></p>
+               <%= link_to "View", project_path(pro), class: "btn btn-info bttn" %>
+           
+                  <%= link_to "Edit", edit_project_path(pro), class: "btn btn-warning bttn" %>
+                  <%= link_to "Delete", project_path(pro), method: :delete, data: {confirm: "Are you sure??"}, 
+                                                                      class: "btn btn-danger bttn" %>
+                
+             </div>
+           <% end %>
+        </div>
+    </div>
+
 </div>
