--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,8 @@
+<div class="center jumbotron">
+  <h2 align="center">Create an New Project</h2>
+</div>
+
+<% render "projects/errors" %>
+
 <%= render "projects/form"  %>
 
