--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <div class="center jumbotron">
   <h1 align="center">Project App</h1>
 </div>
+
+<div align="center">
+  <%= link_to "Create your profile here", new_user_path, class: "btn btn-success btn-lg" %>
+</div>
