--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="center jumbotron">
-  <h2 align="center">Create an New Project</h2>
-</div>
+<div class="container">
+  <div class="row toppie">
+    <h2 align="center">Edit Project</h2>
+  </div>
 
-<% render "projects/errors" %>
-<%= render "projects/form" %>
+    <% render "projects/errors" %>
+    <%= render "projects/form" %>
+</div>
