--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<div class="center jumbotron">
-  <h2 align="center">New User</h2>
+<div class="row toppie">
+  <h2 align="center">Create your New Profile</h2>
 </div>
 
+<%= render "users/errors" %>
 <%= render "userform" %>
