--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <nav>
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-				target="#myNavbar">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
          	 	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>                        
@@ -9,11 +9,22 @@
       		<div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-left">
             <li><%= link_to "Home", root_path %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Users", users_path %></li>
+            <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Project List", projects_path  %></li>
             <li><%= link_to "About" %></li>
+            <% if logged_in? %>
             <li><%= link_to "Create a project", new_project_path %></li>
+            <% end %>
+             <% if current_user %>
+               <li><%= link_to "Log Out", login_path, method: :delete, class: "btn btn-danger nav-button" %></li>
+               <li><%= link_to current_user.name  %>'s profile</li>
+             <% else %>
+                <li><%= link_to "Log In", login_path, class: "btn btn-success nav-button" %></li>
+              <% end %>
           </ul>
         </nav>
       </div>
