--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -25,8 +25,9 @@
           
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
-                <%= f.submit class: "btn btn-primary" %> 
-                <%= link_to "Back to Index", projects_path, class: "btn btn-primary" %>
+                  <%= f.submit class: "btn btn-primary" %> 
+                  <%= link_to "Project List", projects_path, class: "btn btn-primary" %>
+                 
               </div>
             </div>
           
