--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/flash" %>
-<div class="container">
-  <div class="jumbotron center">
+<div class="row toppie">
+  <div class="well">
     <h2 align="center">Index</h2>
   </div>
     
@@ -11,6 +11,7 @@
              <div class="col-md-4 col-md-offset-4 well profile-black-white-thin row "<%= cycle('profile-black-white-thin-b', '') %>>
                <p class="descriptionText">Project: <%= pro.name %></p>
                <p>Description: <%= pro.description %></p>
+               <p>Created by: <%= pro.user.name.capitalize %></p>
                <%= link_to "View", project_path(pro), class: "btn btn-info bttn" %>
            
                   <%= link_to "Edit", edit_project_path(pro), class: "btn btn-warning bttn" %>
