--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,5 @@
-<div class="center jumbotron">
+<div class="container">
+  <div class="row toppie">
   <h2 align="center">Create an New Project</h2>
 </div>
 
@@ -6,3 +7,5 @@
 
 <%= render "projects/form"  %>
 
+
+</div>
