--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,15 +9,15 @@
            <div align="center">
              <% @projects.each do |pro| %>
              <div class="col-md-4 col-md-offset-4 well profile-black-white-thin row "<%= cycle('profile-black-white-thin-b', '') %>>
-               <p class="descriptionText">Project: <%= pro.name %></p>
-               <p>Description: <%= pro.description %></p>
-               <p>Created by: <%= pro.user.name.capitalize %></p>
+                 <p class="descriptionText">Project: <%= pro.name %></p>
+                 <p>Description: <%= pro.description %></p>
+                 <p>Created by: <%= pro.user.name.capitalize %></p>
                <%= link_to "View", project_path(pro), class: "btn btn-info bttn" %>
-           
+               <% if logged_in? && current_user == pro.user %>
                   <%= link_to "Edit", edit_project_path(pro), class: "btn btn-warning bttn" %>
                   <%= link_to "Delete", project_path(pro), method: :delete, data: {confirm: "Are you sure??"}, 
                                                                       class: "btn btn-danger bttn" %>
-                
+              <% end %>  
              </div>
            <% end %>
         </div>
