--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -10,7 +10,7 @@
                   <%= f.label :name %> 
                </div>
                <div class="col-md-8">
-                 <%= f.text_field :name, class: 'form-control', placeholder: "Name of todo", autofocus: true %>
+                 <%= f.text_field :name, class: 'form-control', placeholder: "Name of project", autofocus: true %>
                </div>
              </div>
             
