Changed name of profile create

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <div align="center">
-  <%= link_to "Create your profile here", new_user_path, class: "btn btn-success btn-lg" %>
+  <%= link_to "Create your Profile", new_user_path, class: "btn btn-success btn-lg" %>
 </div>
