--- a/app/views/projects/_errors.html.erb
+++ b/app/views/projects/_errors.html.erb
@@ -1,4 +1,4 @@
-<% if @projects.errors.any? %>
+<% if @project.errors.any? %>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-danger">
