--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,9 +14,10 @@
                <%= link_to "View", user_path(user), class: "btn btn-info bttn" %>
                
                   <%= link_to "Edit", edit_user_path(user), class: "btn btn-warning bttn" %>
+                  <% if logged_in? && current_user.admin? && !user.admin %>
                   <%= link_to "Delete", user_path(user), method: :delete, data: {confirm: "Are you sure??"}, 
                                                                       class: "btn btn-danger bttn" %>
-                
+                <% end %>
              </div>
            <% end %>
         </div>
