--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <div class="col-md-6 col-md-offset-3">
       <div class="well">
       <p align="center">
-        Name: <%= @user.name.capitalize %>
+        <h4 align="center">Name: <%= @user.name %> <%= "(Admin level)" if current_user.admin? %></h4>
       </p>
       <br />
       <p align="center">
