--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,7 +14,7 @@
                  <p>Description: <%= pro.description %></p>
                  <p>Created by: <%= pro.user.name.capitalize %></p>
                <%= link_to "View", project_path(pro), class: "btn btn-info bttn" %>
-               <% if logged_in? && current_user == pro.user || current_user.admin? %>
+               <% if logged_in? && (current_user == pro.user || current_user.admin?) %>
                   <%= link_to "Edit", edit_project_path(pro), class: "btn btn-warning bttn" %>
                     <%= link_to "Delete", project_path(pro), method: :delete, data: {confirm: "Are you sure??"}, 
                                                                       class: "btn btn-danger bttn" %>
