--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,7 @@
            <div align="center">
              <% @projects.each do |pro| %>
              <div class="col-md-4 col-md-offset-4 well profile-black-white-thin row "<%= cycle('profile-black-white-thin-b', '') %>>
-                 <p class="descriptionText">Project: <%= pro.name %></p>
+                 <h4 class="descriptionText">Project: <%= pro.name %></h4>
                  <p>Description: <%= pro.description %></p>
                  <p>Created by: <%= pro.user.name.capitalize %></p>
                <%= link_to "View", project_path(pro), class: "btn btn-info bttn" %>
