--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,30 +1,57 @@
-<%= render "layouts/flash" %>
-<div class="container">
-  <div class="row toppie">
-    <h2 align="center">Project</h2>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <div class="well">
-    <p align="center">
-      Name: <%= @project.name %>
-    </p>
-    <br />
-    <p align="center">
-      Description: <%= @project.description %>
-    </p>
-    <p align="center">
-      <% if logged_in? && (current_user == @project.user || current_user.admin?) %>
-        <%= link_to "Edit Project", edit_project_path(@project), class: "btn btn-primary" %>
-        
-      <% end %>
-      <%= link_to "Project List", projects_path, class: "btn btn-primary" %>
-    </p>
+  <%= render "layouts/flash" %>
+  <div class="container">
+    <div class="row toppie">
+      <h2 align="center">Project</h2>
+  </div>
+  
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="well">
+      <h4 align="center">
+        Project name: <%= @project.name %>
+      </h4>
+      <p align="center">
+        Created by: <%= @project.user.name %>
+      </p>
+      <br />
+      <p align="center">
+        Description: <%= @project.description %>
+      </p>
+      <p align="center">
+        <% if logged_in? && (current_user == @project.user || current_user.admin?) %>
+          <%= link_to "Edit Project", edit_project_path(@project), class: "btn btn-primary" %>
+          
+        <% end %>
+        <%= link_to "Project List", projects_path, class: "btn btn-primary" %>
+      </p>
+      </div>
     </div>
   </div>
-</div>
-</div>
+  </div>
+  
+  <% if logged_in? %>
+    <%= render 'comments/newcomment' %>
+  <% end %>
+  
+ <% if @project.comments.count > 0 %>
+   <div align="center">
+      <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <h3 align="center">Comments: <%= @project.comments.count %></h3>
+        <div id="messages">
+          <%= render partial: 'comments/comments', object: @comments %>
+        </div>
+    </div>
+  </div>
+   </div>
+  <% else %>
+    <div class="row">
+    <div class="col-md-6 col-md-offset-4">
+      <h3 align="center">No comments yet..</h3>
+    </div>
+  </div>
+  <% end %>
+  </div>
   
 
 
